--- a/ms-autenticacao/src/main/resources/application.yaml
+++ b/ms-autenticacao/src/main/resources/application.yaml
@@ -2,10 +2,13 @@ server:
   port: 8080
 
 spring:
+  # ----------------------------------------------------
+  # 1. CONFIGURAÇÃO DE BANCO DE DADOS
+  # ----------------------------------------------------
   datasource:
-    url: ${SPRING_DATASOURCE_URL}
-    username: ${SPRING_DATASOURCE_USERNAME}
-    password: ${SPRING_DATASOURCE_PASSWORD}
+    url: jdbc:postgresql://${AUTH_SERVICE_HOST}:${DB_PORT}/${AUTENTICACAO_DB_NAME}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
     hikari:
       max-lifetime: 1800000
@@ -13,16 +16,22 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql: true
+    show-sql: false # Desabilita logs de query SQL no console
     properties:
       hibernate:
-        format_sql: true
+        format_sql: false # Desabilita a formatação de SQL
         jdbc:
           time_zone: UTC
 
+  # ----------------------------------------------------
+  # 2. SERIALIZAÇÃO E Jackson
+  # ----------------------------------------------------
   jackson:
-    default-property-inclusion: non_null
+    default-property-inclusion: non_null # Omite campos nulos no JSON de resposta
 
+  # ----------------------------------------------------
+  # 3. CONFIGURAÇÃO KAFKA (PRODUTOR)
+  # ----------------------------------------------------
   kafka:
     bootstrap-servers: ${SPRING_KAFKA_BOOTSTRAP_SERVERS}
     producer:
@@ -32,13 +41,18 @@ spring:
       properties:
         spring.json.type.properties.enabled: false
 
+# ----------------------------------------------------
+# CONFIGURAÇÕES DE DOMÍNIO E SEGURANÇA
+# ----------------------------------------------------
 app:
   jwt:
     secret: ${APP_JWT_SECRET}
     expiration: ${APP_JWT_EXPIRATION_MS}
+  internal-secret: ${INTERNAL_SECRET}
 
-  internal-secret: "SEGREDO-INTERNO-COMPARTILHADO-COM-AUTH"
-
+# ----------------------------------------------------
+# DOCUMENTAÇÃO E LOGS
+# ----------------------------------------------------
 springdoc:
   swagger-ui:
     path: /swagger-ui.html
@@ -47,6 +61,7 @@ springdoc:
 
 logging:
   level:
-    org.springframework.security: INFO
-    org.hibernate.SQL: DEBUG
-    com.postechfiap.meuhospital: DEBUG
+    root: INFO
+    org.springframework.security: WARN
+    org.hibernate.SQL: INFO
+    com.postechfiap: DEBUG
