--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -164,6 +164,8 @@ services:
       - ./data/postgres_data/historico:/var/lib/postgresql/data
     networks:
       - hospital_network
+    ports:
+      - "5434:5432"
     restart: always
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}" ]
