--- a/ms-agendamento/src/main/resources/application.yaml
+++ b/ms-agendamento/src/main/resources/application.yaml
@@ -12,7 +12,9 @@ spring:
     driver-class-name: org.postgresql.Driver
     hikari:
       max-lifetime: 1800000
-
+  sql:
+    init:
+      mode: always
   jpa:
     hibernate:
       ddl-auto: update
