--- a/ms-autenticacao/src/main/resources/application.yaml
+++ b/ms-autenticacao/src/main/resources/application.yaml
@@ -10,13 +10,19 @@ spring:
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
+    continue-on-error: true
+    initialization-mode: never
+    platform: postgresql
     hikari:
       max-lifetime: 1800000
   sql:
     init:
-      mode: always
+      mode: never
   jpa:
     hibernate:
+      hbm2ddl:
+        import_files:
+          classpath:  import.sql
       ddl-auto: update
     show-sql: false # Desabilita logs de query SQL no console
     properties:
