--- a/ms-historico/src/main/resources/application.yaml
+++ b/ms-historico/src/main/resources/application.yaml
@@ -13,13 +13,20 @@ spring:
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
-    # Configuração de pool de conexão (ajustes opcionais para histórico)
+    continue-on-error: true
+    initialization-mode: never
+    platform: postgresql
     hikari:
-      maximum-pool-size: 10 # Serviço de leitura pode precisar de mais conexões
-
+      maximum-pool-size: 10
+  sql:
+    init:
+      mode: never
   jpa:
     hibernate:
       ddl-auto: update
+      hbm2ddl:
+        import_files:
+          classpath: import.sql
     show-sql: false
     properties:
       hibernate:
